--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,21 +1,19 @@
-<ion-menu [content]="nav">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <button ion-item (click)="onLoad(tabsPage)">
-        <ion-icon name="quote" item-left></ion-icon>
-        Quotes
-      </button>
-      <button ion-item (click)="onLoad(settingsPage)">
-        <ion-icon name="settings" item-left></ion-icon>
-        Settings
-      </button>
-    </ion-list>
-  </ion-content>
+<ion-menu [content]="content">
+	<ion-header>
+		<ion-toolbar>
+			<ion-title>Menu</ion-title>
+		</ion-toolbar>
+	</ion-header>
+
+	<ion-content>
+		<ion-list>
+			<button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+				{{p.title}}
+			</button>
+		</ion-list>
+	</ion-content>
+
 </ion-menu>
 
-<ion-nav [root]="tabsPage" #nav></ion-nav>
+<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
+<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
